ovf/fixtures/external/OVFToolTemplates/OVF/xmltestfiles/Envelope_1_0/Neg/invalid_version.ovf
<?xml version="1.0" encoding="UTF-8"?>
<ovf:Envelope xmlns="http://schemas.dmtf.org/ovf/envelope/2" xmlns:cim="http://schemas.dmtf.org/wbem/wscim/1/common" xmlns:ovf="http://schemas.dmtf.org/ovf/envelope/1" xmlns:rasd="http://schemas.dmtf.org/wbem/wscim/1/cim-schema/2/CIM_ResourceAllocationSettingData" xmlns:vmw="http://www.vmware.com/schema/ovf" xmlns:vssd="http://schemas.dmtf.org/wbem/wscim/1/cim-schema/2/CIM_VirtualSystemSettingData" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <References>
        <File ovf:size="224391387"  ovf:href="data/ArchLinux-disk1.vmdk"  ovf:id="file1" ></File>
    </References>
</ovf:Envelope>
